# forma

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp  object.cpp  object.hpp  tests.cpp
src/forma/: forma.cpp  forma.hpp
